# FactorySimDX-BI

./: .gitignore  .graphifyignore  PROJECT_DOCUMENTATION.md  README.md  app.py  config.yaml  desktop_app.py  download_erd.py  live_iot_stream.py  main.py  pbi_background_refresh.ps1  pbi_ghost_refresh.py  pyproject.toml  tableau_schema_guide.html  train_model.py
docs/: data_architecture.html  data_architecture.md  future_improvements.md  schema.dbml  schema_infographic.md
snowflake/: 01_setup.sql  02_bronze_ddl.sql  03_silver_ddl.sql  04_gold_ddl.sql  etl_ingestion.py  schema.dbml
src/factory_sim_dx/: engine.py
src/factory_sim_dx/generators/: energy.py  inventory.py  iot_sensor.py  logistics.py  maintenance.py  production.py  quality.py
