[project]
name = "mdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker>=40.28.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "snowflake-connector-python>=4.6.0",
    "streamlit>=1.59.2",
]
